# job-hunt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-jobs.yml
config/: profile.yml  scoring.yml
scripts/: daily_digest.py  jobctl.py
snippets/: experience_snippets.yml
src/: __init__.py
src/core/: application_generator.py  database.py  job_normalizer.py  job_scorer.py
src/scrapers/: multi_source_scraper.py  saramin_scraper.py  wanted_api_scraper.py
src/utils/: email_sender.py
templates/cover_letter/: short.html
templates/emails/: followup.html  recruiter_dm.html
templates/resume/: ko_rag.html
