[tool.poetry]
name = "job-hunt"
version = "1.0.0"
description = "Recruitment Operations System - Automate job application workflows"
authors = ["sora kim <icon_o_clast@naver.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
jobctl = "scripts.jobctl:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
jinja2 = "^3.1.0"
pyyaml = "^6.0.0"
requests = "^2.31.0"
pydantic = "^2.0.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
python-dateutil = "^2.8.0"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
numpy = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
