[project]
name = "job-hunt"
version = "1.0.0"
description = "Recruitment Operations System - Automate job application workflows"
authors = [{name = "sora kim", email = "icon_o_clast@naver.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.1.1",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
jobctl = "scripts.jobctl:cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.11.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]
